# Basic-Numerical-Methods-qml

./: CMakeLists.txt  Main.qml  Plotfx.qml  README.md  Screen_tp1.qml  Screen_tp6.qml  calculhaf.cpp  calculhaf.h  history_output_15_8_2025Manjaro.txt  history_output_15_8_2025Manjaro5.txt  imagesbasic_numerical_methods_qml.qrc  io.github.hafmed.Basic-Numerical-Methods-qml.desktop  io.github.hafmed.Basic-Numerical-Methods-qml.metainfo.xml  io.github.hafmed.Basic-Numerical-Methods-qml.yaml  main.cpp  my_custom_history.txt  org.flatpak.appbasic_numerical_methods_qml_for_github.yaml  org.flatpak.appbasic_numerical_methods_qml_for_local.yaml  qmlbasic_numerical_methods_qml.qrc
android/: AndroidManifest.xml
extrasrc/: 1
qml/: Main.qml  Plotfx.qml  ScopeView.qml  Screen_tp1.qml  Screen_tp2.qml  Screen_tp3.qml  Screen_tp4.qml  Screen_tp5.qml  Screen_tp6.qml
